# huly

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  nodes.txt
codefetch/: out.md
crates/huly/: Cargo.toml
crates/huly-cli/: Cargo.toml
crates/huly-cli/src/: console.rs
crates/rebeldb/: Cargo.toml  build.rs
crates/rebeldb-cli/: Cargo.toml
crates/rebeldb-core/: Cargo.toml
crates/rebeldb-runtime/: Cargo.toml
crates/rebeldb-wasm/: Cargo.toml
docs/: binary-serialization.md  huly-uno.md  rebol-design.md  system-overview.md  vm-integration.md
huly/: Cargo.toml
huly-cli/src/: main.rs
huly/src/: client.rs  db.rs  id.rs  lib.rs  membership.rs  message.rs  proto.rs  server.rs  topic.rs
rebel/: Cargo.toml  path_access_issue_report.md
rebel-macro/: Cargo.toml
rebel-macro/src/: lib.rs
rebel-sh/: Cargo.toml  install_rust.rebel  install_rust_robust.rebel  install_rust_simple.rebel  test.rebel  test_basic.rebel  test_install_rust.rebel  test_path_access.rebel
rebel-sh/src/: main.rs
rebel/docs/: ssh.md
rebel/examples/: ssh_advanced.rebel  ssh_example.rebel
rebel/old/: boot.rs  core.rs  eval.rs  mem.rs  stack.rs
rebel/src/: blob.rs  boot.rs  builders.rs  collector.rs  context_builder.rs  core.rs  encoding.rs  eval.rs  fs.rs  hash.rs  heap.rs  lib.rs  mem.rs  mem2.rs  module.rs  ops.rs  parse.rs  parser.rs  path_access_test.rs  serialize.rs  ssh.rs  stack.rs  stdlib.rebel  stdlib_ext.rebel  symbol.rs  test_path_access.rs  value.rs  vm_serialize.rs
rebel/v2/: core.rs  lib.rs  parse.rs
rebel2/: Cargo.toml
tmp/: db.redb
(+37 files in other folders)
