[package]
name = "huly"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bytes = "1.9.0"
chrono = "0.4.39"
curve25519-dalek = "4.1.3"
data-encoding = "2.6.0"
ed25519-dalek = "2.1.1"
futures-lite = "2.5.0"
iroh = "0.30.0"
iroh-gossip = "0.30.1"
postcard = "1.1.1"
rand = "0.8.5"
redb = "2.4.0"
serde = "1.0.217"
tokio = "1.42.0"
tracing-subscriber = "0.3.19"
uuid = "1.11.0"
