[package]
name = "huly-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hulyctl"
path = "src/main.rs"

[[bin]]
name = "huly"
path = "src/console.rs"

[dependencies]
huly = { path = "../huly" }
rebeldb = { path = "../rebeldb" }
anyhow = "1.0.95"
bytes = "1.9.0"
clap = { version = "4.5.23", features = ["derive"] }
data-encoding = "2.6.0"
ed25519-dalek = "2.1.1"
futures-lite = "2.5.0"
iroh = { version = "0.30.0", features = ["discovery-local-network"] }
iroh-gossip = "0.30.1"
postcard = "1.1.1"
rand = "0.8.5"
redb = "2.4.0"
serde = "1.0.217"
tokio = "1.42.0"
tracing-subscriber = "0.3.19"
uuid = { version = "1.11.0", features = ["v4"] }
config = "0.15.4"
colored = "3.0.0"
rustyline = "15.0.0"
